[project]
name = "autonomous-executive-assistant-env"
version = "0.1.0"
description = "Executive assistant agent"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
